--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.4.7",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.7",
     "@nestjs/platform-express": "^10.4.7",
+    "@nestjs/schematics": "^10.0.0",
     "@nestjs/swagger": "^8.0.5",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.52.1",
@@ -40,14 +42,13 @@
     "dotenv": "^16.4.5",
     "helmet": "^8.0.0",
     "nest-winston": "^1.9.7",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
+    "typescript": "^5.6.3",
     "uuid": "^11.0.2",
-    "winston": "^3.17.0",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "typescript": "^5.6.3"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^10.0.0",
