--- a/prometheus.yml
+++ b/prometheus.yml
@@ -4,4 +4,10 @@ global:
 scrape_configs:
   - job_name: 'hrms-api'
     static_configs:
-      - targets: ['hrms-api:3000']
+      - targets: ['host.docker.internal:3000']
+    metrics_path: '/metrics'
+    scheme: 'http'
+
+  - job_name: 'otel-collector'
+    static_configs:
+      - targets: ['otel-collector:8888']
