--- a/otel-collector-config.yml
+++ b/otel-collector-config.yml
@@ -11,7 +11,7 @@ exporters:
       insecure: true
 
   prometheus:
-    endpoint: prometheus:9090
+    endpoint: 0.0.0.0:9090
 
 processors:
   batch:
