--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,13 +1,14 @@
 global:
   scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
   - job_name: 'hrms-api'
+    metrics_path: '/metrics'
     static_configs:
       - targets: ['host.docker.internal:3000']
-    metrics_path: '/metrics'
-    scheme: 'http'
 
   - job_name: 'otel-collector'
+    scrape_interval: 10s
     static_configs:
-      - targets: ['otel-collector:8888']
+      - targets: ['otel-collector:8889']
